test/classes/errors/nilability-init-var/init-var-oknil-shared-from-nonnil-borrowed.chpl
//  lhs: shared?  rhs: borrowed!  error: mm

class MyClass {
  var x: int;
}

var rhs = new borrowed MyClass();

var lhs: shared MyClass? = rhs;
